@@ -26,6 +26,7 @@ files.
 Version 0.0.15
 --------------
 
+ * added noise figure property to amplifier model
  * new Verilog-A device models: EPFL-EKV NMOS/PMOS V2.6
 
 Version 0.0.14
